--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,12 @@
   },
   "require": {
     "php": "^7.1",
-    "omnipay/common": "~2.0",
+    "omnipay/common": "~3.0",
     "ondrakoupil/csob-eapi-paygate": "^1.7.7"
   },
   "require-dev": {
-    "omnipay/tests": "~2.0"
+    "omnipay/tests": "~3.0",
+    "php-http/guzzle6-adapter": "^1.0"
   },
   "scripts": {
     "test": "phpunit"
