Updating omnipay library to v3

--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,8 @@
   },
   "require": {
     "php": "^7.1",
-    "omnipay/common": "~2.0",
+    "league/omnipay": "~3.0",
     "ondrakoupil/csob-eapi-paygate": "^1.7.7"
-  },
-  "require-dev": {
-    "omnipay/tests": "~2.0"
   },
   "scripts": {
     "test": "phpunit"
